--- a/mgb_AMaker3/mgb_AMaker3.csproj
+++ b/mgb_AMaker3/mgb_AMaker3.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{21187B4D-9843-4A6D-AA05-21061AA4D3FC}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>mgb_AMaker3</RootNamespace>
-    <AssemblyName>mgb_AMaker3</AssemblyName>
+    <RootNamespace>AMaker3</RootNamespace>
+    <AssemblyName>AMaker3</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
